--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
+
     <!-- &lt;!&ndash;添加该权限，webview可以访问网页&ndash;&gt; -->
     <!-- <uses-permission android:name="android.permission.INTERNET"></uses-permission> -->
     <!-- 调用数据库权限 -->
@@ -22,7 +23,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StopAttendanceActivity"></activity>
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/actions" />
+
+        <activity android:name=".TwiceForbiddenActivity" />
+        <activity android:name=".WaitForAttenActivity" />
+        <activity android:name=".StopAttendanceActivity" />
         <activity android:name=".TeacherActivity" />
         <activity android:name=".StudentActivity" />
         <activity android:name=".MainActivity">
